with ipad version

--- a/Week5_Grids/choosesoup.html
+++ b/Week5_Grids/choosesoup.html
@@ -47,8 +47,8 @@
   		<article id="content">
   			<div class="grid">
   			<div class="col-1of5">
-  				<a class="side" href="choosenoodle.html">Step 1:<br>Choose Noodle<br>(Rice Noodle - $2)</a>
-      		<a class="side" href="choosetoppings.html">Step 2:<br>Choose Toppings<br>(Beef Balls - $1.50)</a>
+  				<a class="side" href="choosenoodle.html">Step 1:<br>Choose Noodle<br>(Rice Noodle - $2.00)</a>
+      		<a class="side" href="choosetoppings.html">Step 2:<br>Choose Toppings<br>(Pig's Blood - $1.50)</a>
       		<a class="sideonpage" href="choosesoup.html">Step 3:<br>Choose Soup</a>
       		<a id="selectside4" class="sideNone" href="">Done & Review</a>
   			</div>
@@ -66,8 +66,8 @@
   					</div>
 
   					<div class="col-1of3">
-  						<img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
-              <p class="cartNrow">Soup 1</p>
+  						<img class="menu"src="img/soup_spicy.jpg" width="210" heigh="150">
+              <p class="cartNrow">Spicy Soup</p>
               <p class="cartProw">$2.00</p>
               <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
               <img class="rating"src="img/star.jpg">
@@ -75,8 +75,8 @@
   					</div>
 
   					<div class="col-1of3">
-  						<img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
-              <p class="cartNrow">Soup 1</p>
+  						<img class="menu"src="img/soup_egg.jpg" width="210" heigh="150">
+              <p class="cartNrow">Egg Soup</p>
               <p class="cartProw">$2.00</p>
               <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
               <img class="rating"src="img/star.jpg">
@@ -84,8 +84,8 @@
   					</div>
 
   					<div class="col-1of3">
-  						<img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
-              <p class="cartNrow">Soup 1</p>
+  						<img class="menu"src="img/soup_tomato.jpg" width="210" heigh="150">
+              <p class="cartNrow">Tomato Soup</p>
               <p class="cartProw">$2.00</p>
               <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
               <img class="rating"src="img/star.jpg">
@@ -93,8 +93,8 @@
   					</div>
 
   					<div class="col-1of3">
-  						<img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
-              <p class="cartNrow">Soup 1</p>
+  						<img class="menu"src="img/soup_chicken.jpg" width="210" heigh="150">
+              <p class="cartNrow">Chicken Soup</p>
               <p class="cartProw">$2.00</p>
               <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
               <img class="rating"src="img/star.jpg">
@@ -102,8 +102,8 @@
   					</div>
 
   					<div class="col-1of3">
-  						<img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
-              <p class="cartNrow">Soup 1</p>
+  						<img class="menu"src="img/soup_spicy.jpg" width="210" heigh="150">
+              <p class="cartNrow">Spicy Soup</p>
               <p class="cartProw">$2.00</p>
               <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
               <img class="rating"src="img/star.jpg">
@@ -111,31 +111,23 @@
   					</div>
 
   					<div class="col-1of3">
-  						<img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
-              <p class="cartNrow">Soup 1</p>
-              <p class="cartProw">$2.00</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-              <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">20 Comments</a>
-  					</div>
-
-  					<div class="col-1of3">
-  						<img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
-              <p class="cartNrow">Soup 1</p>
-              <p class="cartProw">$2.00</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-              <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">20 Comments</a>
-  					</div>
-
-            <div class="col-1of3">
-              <img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
-              <p class="cartNrow">Soup 1</p>
+              <img class="menu"src="img/soup_egg.jpg" width="210" heigh="150">
+              <p class="cartNrow">Egg Soup</p>
               <p class="cartProw">$2.00</p>
               <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">20 Comments</a>
             </div>
+
+            <div class="col-1of3">
+              <img class="menu"src="img/soup_tomato.jpg" width="210" heigh="150">
+              <p class="cartNrow">Tomato Soup</p>
+              <p class="cartProw">$2.00</p>
+              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">20 Comments</a>
+            </div>
+
   				</article>
           
   			</div>
