--- a/Week5_Grids/choosetoppings.html
+++ b/Week5_Grids/choosetoppings.html
@@ -47,7 +47,7 @@
   		<article id="content">
   			<div class="grid">
   			<div class="col-1of5">
-  				<a class="side" href="choosenoodle.html">Step 1:<br>Choose Noodle<br>(Rice Noodle - $2)</a>
+  				<a class="side" href="choosenoodle.html">Step 1:<br>Choose Noodle<br>(Rice Noodle - $2.00)</a>
       		<a class="sideonpage" href="choosetoppings.html">Step 2:<br>Choose Toppings</a>
       		<a id="selectside3" class="sideNone" href="">Step 3:<br>Choose Soup</a>
       		<a class="sideNone" href="">Done & Review</a>
@@ -66,8 +66,8 @@
   					</div>
 
   					<div class="col-1of3">
-  						<img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
-              <p class="cartNrow">Topping 1</p>
+  						<img class="menu"src="img/topping_pigblood.jpg" width="210" heigh="150">
+              <p class="cartNrow">Pig's Blood</p>
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
               <img class="rating"src="img/star.jpg">
@@ -75,8 +75,17 @@
   					</div>
 
   					<div class="col-1of3">
-  						<img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
-              <p class="cartNrow">Topping 1</p>
+              <img class="menu"src="img/topping_pigblood.jpg" width="210" heigh="150">
+              <p class="cartNrow">Pig's Blood</p>
+              <p class="cartProw">$1.50</p>
+              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">14 Comments</a>
+            </div>
+
+  					<div class="col-1of3">
+  						<img class="menu"src="img/topping_chickenwing.jpg" width="210" heigh="150">
+              <p class="cartNrow">Chicken Wings</p>
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
               <img class="rating"src="img/star.jpg">
@@ -84,8 +93,8 @@
   					</div>
 
   					<div class="col-1of3">
-  						<img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
-              <p class="cartNrow">Topping 1</p>
+  						<img class="menu"src="img/topping_chickenwing.jpg" width="210" heigh="150">
+              <p class="cartNrow">Chicken Wings</p>
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
               <img class="rating"src="img/star.jpg">
@@ -93,17 +102,8 @@
   					</div>
 
   					<div class="col-1of3">
-  						<img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
-              <p class="cartNrow">Topping 1</p>
-              <p class="cartProw">$1.50</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-              <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">14 Comments</a>
-  					</div>
-
-  					<div class="col-1of3">
-  						<img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
-              <p class="cartNrow">Topping 1</p>
+  						<img class="menu"src="img/topping_chickenwing.jpg" width="210" heigh="150">
+              <p class="cartNrow">Chicken Wings</p>
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
               <img class="rating"src="img/star.jpg">
@@ -120,8 +120,8 @@
   					</div>
 
   					<div class="col-1of3">
-  						<img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
-              <p class="cartNrow">Topping 1</p>
+  						<img class="menu"src="img/topping_fishball.jpg" width="210" heigh="150">
+              <p class="cartNrow">Curry Fishball</p>
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
               <img class="rating"src="img/star.jpg">
@@ -129,8 +129,36 @@
   					</div>
 
             <div class="col-1of3">
-              <img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
-              <p class="cartNrow">Topping 1</p>
+              <img class="menu"src="img/topping_fishball.jpg" width="210" heigh="150">
+              <p class="cartNrow">Curry Fishball</p>
+              <p class="cartProw">$1.50</p>
+              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">14 Comments</a>
+            </div>
+
+
+            <div class="col-1of3">
+              <img class="menu"src="img/topping_vege.jpg" width="210" heigh="150">
+              <p class="cartNrow">Green Vegetable</p>
+              <p class="cartProw">$1.50</p>
+              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">14 Comments</a>
+            </div>
+
+            <div class="col-1of3">
+              <img class="menu"src="img/topping_tomato.jpg" width="210" heigh="150">
+              <p class="cartNrow">Tomato</p>
+              <p class="cartProw">$1.50</p>
+              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">14 Comments</a>
+            </div>
+
+            <div class="col-1of3">
+              <img class="menu"src="img/topping_tofu.jpg" width="210" heigh="150">
+              <p class="cartNrow">Tofu</p>
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
               <img class="rating"src="img/star.jpg">
