--- a/Week5_Grids/confirm.html
+++ b/Week5_Grids/confirm.html
@@ -56,12 +56,39 @@
 
 	  			<div class="col-4of5">
 	  				<article id="paddingleft">
+	  				
 	  				<h1 class="global">CONFIRMATION</h1>
-	  				<p class="pi">NAME : </p>
+	  				<article id="">
+	  					<h2>MY CART</h2>
+	  					<img class="cart" src="img/nood1.jpg" width="100" heigh="100"><br>
+	  				</article>
 	  				</article>
 	  			</div>
-	  			<a class="conBut" href="receipt.html">SAVE AND NEXT</a>
+	  			<div class="col-4of5">
+	  				<article id="paddingleft">
+<!-- 	  				
+	  				<h1 class="global">CONFIRMATION</h1>
+	  				<article id="">
+	  					<p class="pi">MY CART</p>
+	  					<img class="cart" src="img/nood1.jpg" width="150" heigh="150"><br>
+	  				</article> -->
+
+	  				<h2>PERSONAL & BILLING INFORMATION</h2>
+	  				<p class="pi">NAME : Mary</p>
+	  				<p class="pi">PAYMENT TYPE : VISA</p>
+	  				<p class="pi">CARD NUMBER : 1234 3456 3456 4567</p>
+	  				<p class="pi">EXPIRES : 11 / 14</p>
+	  				<p class="pi">SECURITY CODE : 123</p>
+	  				</article>
+	  			</div>
 	  		</div>
+
+	  			<article id="content">
+	  				<a class="conBut" href="receipt.html">SAVE AND NEXT</a>	
+		  			<a class="conBut" href="personalbillinginfo.html">EDIT IT</a>
+		  			
+		  		</article>
+
 	  	</article>
 	</body>
 </html>
