--- a/Week5_Grids/detailview.html
+++ b/Week5_Grids/detailview.html
@@ -72,7 +72,7 @@
   			</div>
   			<div class="col-4of5">
   				<article id="paddingleft">
-  					<a class="detailviewaddtocart" href="">ADD TO CART</a>
+  					<a class="detailviewaddtocart" href="cart.html">ADD TO CART</a>
 
   					<select class="detailview">
 						<option value="">1</option>
