--- a/Week5_Grids/donenood.html
+++ b/Week5_Grids/donenood.html
@@ -48,7 +48,7 @@
   			<div class="grid">
 	  			<div class="col-1of5">
 		  			<a class="side" href="choosenoodle.html">Step 1:<br>Choose Noodle<br>(Rice Noodle - $2)</a>
-		      		<a class="side" href="choosetoppings.html">Step 2:<br>Choose Toppings<br>(Beef Balls - $1.50)</a>
+		      		<a class="side" href="choosetoppings.html">Step 2:<br>Choose Toppings<br>(Pig's Blood - $1.50)</a>
 		      		<a class="side" href="choosesoup.html">Step 3:<br>Choose Soup<br>(Chicken Soup - $2)</a>
 		      		<a class="sideonpage" href="donenood.html">Done & Review</a>
 	  			</div>
@@ -74,9 +74,9 @@
 		  						<h2>TOTAL</h2>
 		  					</div>
 		  					<div class="col-1of3">
-		  						<h3>$2</h3>
+		  						<h3>$2.00</h3>
 		  						<h3>$1.50</h3>
-		  						<h3>$2</h3>
+		  						<h3>$2.00</h3>
 		  						<h2>$5.50</h2>
 		  					</div>
 
