--- a/Week5_Grids/news.html
+++ b/Week5_Grids/news.html
@@ -54,10 +54,15 @@
 
   			<div class="col-4of5">
   				<article id="news">
-  					<h1 class="global">NEW PRODUCT</h1>
-  					<P class="news">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate. Fusce tempus euismod massa, at tincidunt ante sollicitudin at. Phasellus viverra lobortis orci nec aliquet. Proin fringilla, enim quis porttitor tincidunt, eros orci feugiat nunc, quis feugiat velit nibh ac augue. Cras vel turpis mattis, cursus metus a, pharetra purus. Maecenas non nisi in lectus bibendum semper. Proin sodales vitae quam id ultricies. Integer commodo eros quis diam scelerisque tempus. Sed ut ornare erat. Aliquam feugiat nunc in posuere auctor. Nullam nisl leo, eleifend et libero quis, venenatis auctor ipsum.</P>
-            <!-- <a class="about" href="">VIEW DETAILS</a> -->
-            <a class="about" href="cart.html">ADD TO CART</a>
+          <h1 class="global">NEW PRODUCT</h1>
+            <div class="col-1of2">
+              <img class="contact"src="img/bignews1.jpg" width="300">
+            </div>
+            <div class="col-1of2">
+    					<P class="news">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate. Fusce tempus euismod massa, at tincidunt ante sollicitudin at. Phasellus viverra lobortis orci nec aliquet. Proin fringilla, enim quis porttitor tincidunt, eros orci feugiat nunc, quis feugiat velit nibh ac augue. Cras vel turpis mattis, cursus metus a, pharetra purus. Maecenas non nisi in lectus bibendum semper. Proin sodales vitae quam id ultricies. </P>
+              <!-- <a class="about" href="">VIEW DETAILS</a> -->
+              <a class="about" href="cart.html">ADD TO CART</a>
+            </div>
   				</article>
 
   				<article id="promotion">
