--- a/Week5_Grids/personalbillinginfo.html
+++ b/Week5_Grids/personalbillinginfo.html
@@ -57,8 +57,34 @@
 	  			<div class="col-4of5">
 	  				<article id="paddingleft">
 	  				<h1 class="global">PERSONAL INFORMAION</h1>
-	  				<p class="pi">NAME : </p>
+	  				<form method="post" action="#" id="comments">
+  						<label for ="form-name">Name:</label>
+						<input type="text" id="form-name" name="form-name" placeholder="">
+  					</form>
+
 	  				<h1 class="global">BILLING INFORMATION</h1>
+	  				<form method="post" action="#" id="comments">
+  						<label for ="form-name">PAYMENT TYPE:</label>
+						<input type="text" id="form-name" name="form-name" placeholder="">
+  					</form>
+  					<form method="post" action="#" id="comments">
+  						<label for ="form-name">CARD NUMBER:</label>
+						<input type="text" id="form-name" name="form-name" placeholder="">
+  					</form>
+  					<form method="post" action="#" id="comments">
+  						<label for ="form-name">EXPIRES:</label>
+						<input type="text" id="form-name" name="form-name" placeholder="">
+  					</form>
+  					<form method="post" action="#" id="comments">
+  						<label for ="form-name">SECURITY CODE:</label>
+						<input type="text" id="form-name" name="form-name" placeholder="">
+  					</form>
+
+	  				<h1 class="global">PROMOTION</h1>
+	  				<form method="post" action="#" id="comments">
+  						<label for ="form-name">PROMOTION CODE:</label>
+						<input type="text" id="form-name" name="form-name" placeholder="">
+  					</form>
 	  				<a class="persoanlbillBut" href="confirm.html">SAVE AND NEXT</a>
 	  				</article>
 	  			</div>
