--- a/Week5_Grids/cart.html
+++ b/Week5_Grids/cart.html
@@ -55,8 +55,8 @@
   					<article id="paddingleftNext">
 		  				<div class="col-2of4">
 		  					<h3>CART NOODLE</h3>
-		  					<img class="cart" src="http://placehold.it/150x150" width="150" heigh="150">
-		  					<h3>Noodle 1</h3>
+		  					<img class="cart" src="img/nood1.jpg" width="150" heigh="150">
+		  					<h3>Fishball Nood</h3>
 		  					<p class="cart"><a class="cart" href="">VIEW DETAILS</a> / <a class="cart" href="">REMOVE</a></p>
 		  				</div>
 
@@ -67,7 +67,7 @@
 
 		  				<div class="col-1of4">
 		  					<h3>PRICE</h3>
-		  					<h3>$5.99</h3>
+		  					<h3>$6.75</h3>
 		  				</div>
             </article>
           </div>
@@ -76,7 +76,7 @@
             <article id="paddingleftNext">
               <div class="col-2of4">
                 <img class="cart" src="http://placehold.it/150x150" width="150" heigh="150">
-                <h3>Noodle 1</h3>
+                <h3>My Noodle</h3>
                 <p class="cart"><a class="cart" href="">VIEW DETAILS</a> / <a class="cart" href="">REMOVE</a></p>
               </div>
 
@@ -85,7 +85,7 @@
               </div>
 
               <div class="col-1of4">
-                <h3>$5.99</h3>
+                <h3>$5.50</h3>
               </div>	  				
             </article>
           </div>
@@ -94,18 +94,19 @@
   			<div class="grid">
   				<div class="col-4of5" id="carttotal">
   					<div class="col-1of4" id="total">	
-  						<h3 class ="cart">$5.99</h3>
-  						<h3 class ="cart">$0.30</h3>
-  						<h3>$6.29</h3>
+  						<h3 class ="cart">$12.25</h3>
+  						<h3 class ="cart">$0.61</h3>
+  						<h3 class="cart" >$12.86</h3>
   					</div>
   					<div class="col-1of4" id="total">
-  						<h3 class="cart">SUB-TOTAL:</h3>
-  						<h3 class="cart">GST/HST:</h3>
+  						<h3 class="">SUB-TOTAL:</h3>
+  						<h3 class="">GST/HST:</h3>
   						<h3>TOTAL:</h3>
   					</div>
   				</div>
 	  		</div>
   		</article>
+      
   		<article id="content2">
   			<a class="cartBut" href="buynow.html">BUY NOW</a>
   			<a class="cartBut" href="menu.html">BACK TO MENU</a>	
