--- a/Week5_Grids/choosenoodle.html
+++ b/Week5_Grids/choosenoodle.html
@@ -93,8 +93,8 @@
   					</div>
 
   					<div class="col-1of3">
-  						<img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
-              <p class="cartNrow">Noodle 1</p>
+  						<img class="menu"src="img/noodle_instant.jpg" width="210" heigh="150">
+              <p class="cartNrow">Instant Noodle</p>
               <p class="cartProw">$2.00</p>
               <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
               <img class="rating"src="img/star.jpg">
@@ -102,8 +102,8 @@
   					</div>
 
   					<div class="col-1of3">
-  						<img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
-              <p class="cartNrow">Noodle 1</p>
+  						<img class="menu"src="img/noodle_udon.jpg" width="210" heigh="150">
+              <p class="cartNrow">Undo</p>
               <p class="cartProw">$2.00</p>
               <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
               <img class="rating"src="img/star.jpg">
@@ -111,26 +111,26 @@
   					</div>
 
   					<div class="col-1of3">
-  						<img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
-              <p class="cartNrow">Noodle 1</p>
+              <img class="menu" src="img/noodle_egg.jpg" width="210" height="150">
+              <p class="cartNrow">Egg Noodle</p>
               <p class="cartProw">$2.00</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <p class="cartDrow">Thin Noodle made with flour and eggs</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">14 Comments</a>
-  					</div>
-
-  					<div class="col-1of3">
-  						<img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
-              <p class="cartNrow">Noodle 1</p>
-              <p class="cartProw">$2.00</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-              <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">14 Comments</a>
-  					</div>
+            </div>
 
             <div class="col-1of3">
-              <img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
-              <p class="cartNrow">Noodle 1</p>
+              <img class="menu"src="img/noodle_thick.jpg" width="210" heigh="150">
+              <p class="cartNrow">Thick Noodle</p>
+              <p class="cartProw">$2.00</p>
+              <p class="cartDrow">Thick Noodle made with flour and eggs</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">10 Comments</a>
+            </div>
+
+            <div class="col-1of3">
+              <img class="menu"src="img/noodle_thin.jpg" width="210" heigh="150">
+              <p class="cartNrow">Thin Noodle</p>
               <p class="cartProw">$2.00</p>
               <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
               <img class="rating"src="img/star.jpg">
