--- a/Week5_Grids/contact.html
+++ b/Week5_Grids/contact.html
@@ -53,7 +53,7 @@
   			<div class="col-4of5">
           <article id="paddingleft">
           <div class="col-1of2">
-            <img class="contact"src="img/store.jpg" width="300">
+            <img class="contact"src="img/store2.jpg" width="300">
           </div>
 
           <div class="col-1of2">
