Added a scrollto function for the sidebars in the about us page and menu page

--- a/Week5_Grids/about.html
+++ b/Week5_Grids/about.html
@@ -47,8 +47,8 @@
       <article id="content">
   		<div class="grid">
   			<div class="col-1of5">
-          <a class="side" href="#aboutus">About Us</a>
-          <a class="side" href="#history">History</a>
+          <a id ="aboutusbutton" class="side" href="#aboutus">About Us</a>
+          <a id ="historybutton" class="side" href="#history">History</a>
   			</div>
 
   			<div class="col-4of5">
@@ -70,5 +70,10 @@
 
   		</div>
     </article>
+
+    <script src="js/jquery.js"></script>
+    <script src="js/ui.js"></script>
+    <script src="js/jquery.scrollTo-1.4.3.1-min.js"></script>
+
   	</body>
 </html>
