--- a/Week5_Grids/menu.html
+++ b/Week5_Grids/menu.html
@@ -47,10 +47,10 @@
   		<article id="content">
   		<div class="grid">
   			<div class="col-1of5">
-  				<a class="side" href="#cartnoodles">Cart Noodles</a>
-          		<a class="side" href="#soup">Soup</a>
-          		<a class="side" href="#drinks">Drinks</a>
-          		<a class="side" href="#dessert">Dessert</a>
+  				    <a id ="cartnoodlesbutton" class="side" href="#cartnoodles">Cart Noodles</a>
+          		<a id ="soupbutton" class="side" href="#soup">Soup</a>
+          		<a id ="drinksbutton" class="side" href="#drinks">Drinks</a>
+          		<a id ="dessertbutton" class="side" href="#dessert">Dessert</a>
   			</div>
 
   			<div class="col-4of5">
@@ -83,7 +83,7 @@
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">48 Comments</a>
   					</div>
-            <div class="col-1of3" id="menu">
+<!--             <div class="col-1of3" id="menu">
               <img class="menu"src="img/nood4.jpg" width="210" height="150">
               <p class="cartNrow">Pork Lover</p>
               <p class="cartProw">$6.75</p>
@@ -108,7 +108,7 @@
               <p class="cartDrow">Special nood for who like soft food, different kinds of tofu</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">67 Comments</a>
-            </div>
+            </div> -->
           </article>
 
   				<article id="soup">
@@ -140,7 +140,7 @@
               <a class="prodcomment" href="">56 Comments</a>
             </div>
 
-            <div class="col-1of3" id="menu">
+<!--             <div class="col-1of3" id="menu">
               <img class="menu"src="img/soup.jpg" width="210" height="150">
               <p class="cartNrow">Carrot Pork Soup</p>
               <p class="cartProw">$3.50</p>
@@ -156,7 +156,7 @@
               <p class="cartDrow">Carrot, potato and juicy pork</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">56 Comments</a>
-            </div>
+            </div> -->
   				</article>
 
   				<article id="drinks">
@@ -188,7 +188,7 @@
               <a class="prodcomment" href="">19 Comments</a>
             </div>
 
-            <div class="col-1of3" id="menu">
+<!--             <div class="col-1of3" id="menu">
               <img class="menu"src="img/drink.jpg" width="210" height="150">
               <p class="cartNrow">Ice Lemon Tea</p>
               <p class="cartProw">$1.50</p>
@@ -213,7 +213,7 @@
               <p class="cartDrow">Red tea with slides of lemon</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">19 Comments</a>
-            </div>
+            </div> -->
   				</article>
 
   				<article id="dessert">
@@ -245,7 +245,7 @@
               <a class="prodcomment" href="">23 Comments</a>
             </div>
 
-            <div class="col-1of3" id="menu">
+<!--             <div class="col-1of3" id="menu">
               <img class="menu"src="img/dessert.jpg" width="210" height="150">
               <p class="cartNrow">French Toast</p>
               <p class="cartProw">$1.50</p>
@@ -260,13 +260,17 @@
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Soak bread in eggs and add milk and sugar</p>
               <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">23 Comments</a>
+              <a class="prodcomment" href="">23 Comments</a> -->
             </div>
 
   				</article>
   			</div>
   		</div>
   		</article>
+      
+      <script src="js/jquery.js"></script>
+      <script src="js/ui.js"></script>
+     <script src="js/jquery.scrollTo-1.4.3.1-min.js"></script>
 
   	</body>
 </html>
